--- a/WEB/AllVideo/index.html
+++ b/WEB/AllVideo/index.html
@@ -8,23 +8,248 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../asset/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Dream-Learning <i class="fa fa-cloud" style="font-size:35px;color:aquamarine"></i></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <h1>Hello, world!</h1>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item ">
+                    <a class="nav-link" href="">HOME<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="../allvideo/index.html">ALL VIDEOS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">MY FAVORITE</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        CIRRICULUMS
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">B.Sc.IT</a>
+                        <a class="dropdown-item" href="#">B.Sc.CS</a>
+                        <a class="dropdown-item" href="#">M.Sc.IT</a>
+                        <a class="dropdown-item" href="#">DSI</a>
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+    <center>
+        <h1>All Videos</h1>
+    </center>
+
+    <div class="row">
+        <div class="col-sm-1 col-lg-1"></div>
+        <div class="col-sm-10 col-lg-10">
+            <hr>
+        </div>
+    </div>
+    <p id="demo"></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="../video/videoPlayer.html">
+                            <img class="card-img-top" src="../resource/image/video_title.PNG" alt="Card image cap"
+                                width="500" height="350">
+                            <div class="card-body">
+                                <h5 class="card-title">INT 101 INFORMATION TECHNOLOGY FUNDAMENTAL G.1</h5>
+                                <div class="card-footer">
+                                    <small class="text-muted">Siam Yamsaengsung ♥2018-08-24 00:00:00</small>
+                                </div>
+                            </div>
+                        </a>
+                        <p class="card-text">...</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="../asset/js/bootstrap.min.js"></script>
+    <script src="../asset/jquery/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 </body>
 
