--- a/WEB/video/videoPlayer.html
+++ b/WEB/video/videoPlayer.html
@@ -2,14 +2,11 @@
 
 <head>
     <link rel="stylesheet" href="../asset/css/bootstrap.min.css">
-    <script src="../asset/js/bootstrap.min.js"></script>
-    <script src="../asset/jquery/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-
+    
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Dream-Learning <i class="fa fa-cloud" style="font-size:35px;color:aquamarine"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -19,22 +16,25 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item ">
+                    <a class="nav-link" href="">HOME<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="../allvideo/index.html">ALL VIDEOS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">MY FAVORITE</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        Dropdown
+                        CIRRICULUMS
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">B.Sc.IT</a>
+                        <a class="dropdown-item" href="#">B.Sc.CS</a>
+                        <a class="dropdown-item" href="#">M.Sc.IT</a>
+                        <a class="dropdown-item" href="#">DSI</a>
                     </div>
                 </li>
             </ul>
@@ -46,10 +46,11 @@
     </nav>
 
     <div class="row">
+
         <div class="offset-3 col-6 offset-3">
             <h1>
                 <i class="fa fa-caret-square-o-right" style="font-size:36px"></i>
-                INT202 Software Development Process               
+                INT202 Software Development Process
             </h1>
             <h3><b>Teacher:</b> Ajarn Patric Emmel</h3>
         </div>
@@ -58,43 +59,18 @@
     <div class="row">
         <div class="offset-3 col-6">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="C:/Users/leno/Desktop/test-video.mp4" allowfullscreenautoplay></iframe>
+                <iframe class="embed-responsive-item" src="../resource/video/sit-kmutt.mp4" allowfullscreenautoplay></iframe>
             </div>
-        </div>
-        <div class="col-3">
-            <h3>
-                recommend video
-                <i class="fa fa-tv" style="font-size:36px"></i>
-            </h3>
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="C:/Users/leno/Desktop/test-video.mp4" allowfullscreenautoplay></iframe>
-            </div>
-            <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="C:/Users/leno/Desktop/test-video.mp4" allowfullscreenautoplay></iframe>
-            </div>
-            <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="C:/Users/leno/Desktop/test-video.mp4" allowfullscreenautoplay></iframe>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="offset-3 col-6 offset-3">
             <div class="card w-50">
                 <div class="card-body">
-                    <h5 class="card-title"> 
+                    <h5 class="card-title">
                         <i class="fa fa-user-circle-o" style="font-size:36px"></i>
-                        Comment 1 
+                        Comment 1
                         <i class="fa fa-commenting" style="font-size:36px"></i>
                     </h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">Teacher's voice is so sweet.</p>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="offset-3 col-6 offset-3">
             <div class="card w-50">
                 <div class="card-body">
                     <h5 class="card-title">
@@ -102,10 +78,56 @@
                         Comment 2
                         <i class="fa fa-commenting" style="font-size:36px"></i>
                     </h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">I love this video.</p>
+                </div>
+            </div>
+            <div class="card w-50">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <i class="fa fa-user-circle-o" style="font-size:36px"></i>
+                        Comment 3
+                        <i class="fa fa-commenting" style="font-size:36px"></i>
+                    </h5>
+                    <p class="card-text">I think that the video doesn't match the title.</p>
+                </div>
+            </div>
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Comment here..." width="10px">
+                <div class="input-group-append">
+                    <button class="btn btn-primary" type="button">OK</button>
                 </div>
             </div>
         </div>
+        <div class="col-3">
+            <h3>
+                Recommend Videos
+                <i class="fa fa-tv" style="font-size:36px"></i>
+            </h3>
+            <div>
+                <video width="320" height="240" controls>
+                    <source src="../resource/video/kmutt-history.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div>
+                <video width="320" height="240" controls>
+                    <source src="../resource/video/kmutt-history.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+
+            <div>
+                <video width="320" height="240" controls>
+                    <source src="../resource/video/kmutt-history.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+
+        </div>
+
     </div>
 
     <footer class="page-footer font-small bg-dark">
@@ -116,6 +138,10 @@
         </div>
     </footer>
 
+    <script src="../asset/js/bootstrap.min.js"></script>
+    <script src="../asset/jquery/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
